[package]
name = "bevy_test_game"
version = "0.1.0"
authors = ["Mike Hsu <mike.hsu@gmail.com>"]
edition = "2021"

[dependencies]
bevy = { git = "https://github.com/bevyengine/bevy.git" }
bevy_common_assets = { git = "https://github.com/NiklasEi/bevy_common_assets.git", branch = "bevy_main", features = ["ron"] }
rand = "0.8.0"
ron = "0.6.4"
serde = { version = "1.0", features = ["derive"] }